# activation-oracles-GRPO

./: .env.example  .gitignore  CLAUDE.md  SESSION_NOTES.md  chat_log_wildchat_dataset.txt  claude.md  evaluate.py  fetch_wildchat_questions.py  pyproject.toml  setup_remote.sh  sft_format.py  test_pipeline.py  train.py
datasets/: README.md  wildchat_oracle_questions.jsonl
grpo_ao/: config.py  epistemic_status.py  grpo_trainer.py  judge.py  reward.py
rest_ao/: __init__.py  calibration_eval.py  config.py  data_pipeline.py  epistemic_status.py  judge.py  question_generation.py  rest_trainer.py  reward.py
