[project]
name = "rest-activation-oracles"
version = "0.1.0"
description = "Calibrated Activation Oracle training with Reinforced Self-Training (ReST)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "datasets>=2.18.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.21.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.28.0",
    "openai>=1.0.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"
